gcc/testsuite/gm2/pim/pass/settest3.mod
MODULE settest3 ;

TYPE BigSet = SET OF CARDINAL;                                                                                
        
BEGIN
        (******)                                               
END settest3.

