gcc/testsuite/gm2/pim/fail/setunknown2.mod
MODULE setunknown2 ;

BEGIN
   INCL (unknownSet, unknownVariable)
END setunknown2.
